# anyserp-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py
src/anyserp/: __init__.py  _client.py  _errors.py  _types.py
src/anyserp/providers/: __init__.py  _bing.py  _brave.py  _brightdata.py  _dataforseo.py  _google.py  _scrapingdog.py  _searchapi.py  _searchcans.py  _serpapi.py  _serper.py  _valueserp.py
tests/: test_client.py  test_providers.py
