[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyserp-py"
version = "0.1.0"
description = "Unified SERP API router supporting 11 providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Probeo" }]
keywords = ["serp", "search", "api", "google", "bing", "brave"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anyserp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
